<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_create_hackathon"
            android:icon="@drawable/ic_create_hackathon"
            android:title="@string/create_hackathon" />

        <item
            android:id="@+id/nav_user_hackathons"
            android:icon="@drawable/ic_my_hackathon"
            android:title="@string/my_hackathons" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_user"
            android:title="@string/manage_account" />

        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />-->

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

</menu>